# ModernCPP

./: .gitignore  Readme.md
STL/: vec
auto_keyword/: CMakeLists.txt
auto_keyword/source/: main.cpp
callable_objects/: main.cpp
class_intro/: main
code/STL/: containers.cpp
code/callable_objects/: main
code/class_intro/: inheritance  inheritance.cpp  main.cpp  move.cpp  overload.cpp
code/exception/: CMakeLists.txt  boundary  boundary_exception.cpp  file_exception.cpp  memory_exception  memory_exception.cpp
code/io/: io
code/multi_threads/: my_thread.cpp
code/smart_pointer/: shared_ptr  unique_ptr.cpp
code/static_variable/: main.cpp
code/template/: MyArrayTest
exception/: CMakeLists.txt  arithmetic_exception.cpp  file_exception
io/: io.cpp
multi_threads/: CMakeLists.txt  CMakePresets.json  deadlock.cpp
note/: Modern Cpp.md
smart_pointer/: shared_ptr.cpp  weak_ptr  weak_ptr.cpp
static_variable/: main
template/: CMakeLists.txt  MyArray.hpp  main.cpp  specialize  specialize.cpp
